--- a/Casino/src/main/resources/fxml/Roulette.fxml
+++ b/Casino/src/main/resources/fxml/Roulette.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,15 +8,11 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="490.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.games.RouletteController">
+<AnchorPane prefHeight="411.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.games.RouletteController">
    <children>
-      <ImageView fitHeight="283.0" fitWidth="497.0" layoutX="52.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Roulette-Feld-V2.png" />
-         </image>
-      </ImageView>
-      <GridPane layoutX="104.0" layoutY="27.0" prefHeight="228.0" prefWidth="431.0">
+      <GridPane layoutX="399.0" layoutY="236.0" prefHeight="228.0" prefWidth="435.0">
         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="3.0" minWidth="3.0" prefWidth="3.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="3.0" minWidth="3.0" prefWidth="3.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="29.0" minWidth="29.0" prefWidth="29.0" />
@@ -52,6 +49,40 @@
             <RowConstraints maxHeight="106.40000915527344" minHeight="5.0" prefHeight="28.399993896484375" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="106.40000915527344" minHeight="10.0" prefHeight="28.400006103515636" vgrow="SOMETIMES" />
         </rowConstraints>
+         <children>
+            <AnchorPane prefHeight="28.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="13" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="17" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="21" GridPane.columnSpan="3" GridPane.rowIndex="7" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="7" GridPane.rowIndex="6" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="9" GridPane.columnSpan="7" GridPane.rowIndex="6" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="17" GridPane.columnSpan="7" GridPane.rowIndex="6" />
+         </children>
       </GridPane>
+      <ImageView fitHeight="629.0" fitWidth="960.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/roulette-2.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="283.0" fitWidth="497.0" layoutX="350.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Roulette-Feld-V2.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="368.0" layoutY="323.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="31.0" text="Button" visible="false" />
+      <Button layoutX="368.0" layoutY="236.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="31.0" text="Button" visible="false" />
+      <ImageView fitHeight="217.0" fitWidth="208.0" layoutX="-43.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/jetons-25.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="187.0" fitWidth="210.0" layoutX="95.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/jetons-50.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="307.0" layoutY="17.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="165.0" text="Button" />
    </children>
 </AnchorPane>
