--- a/Casino/src/main/resources/fxml/Start.fxml
+++ b/Casino/src/main/resources/fxml/Start.fxml
@@ -4,24 +4,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import java.net.URL?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity" pickOnBounds="false" prefHeight="422.0" prefWidth="758.0"
-            xmlns="http://javafx.com/javafx/8.0.172-ea"
-            fx:controller="ch.bbbaden.casino.scenes.StartController">
-    <stylesheets>
-        <URL value="@/styles/BasicStyle.css"/>
-        <URL value="@/styles/StartStyle.css"/>
-    </stylesheets>
-    <ImageView fitHeight="146.0" fitWidth="233.0" layoutX="263.0" layoutY="20.0" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../images/Logo.png"/>
+
+<AnchorPane id="AnchorPane" maxHeight="432" maxWidth="768" minHeight="422" minWidth="758" pickOnBounds="false" prefHeight="432.0" prefWidth="768.0" stylesheets="@/styles/BasicStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.scenes.StartController">
+    <ImageView fitHeight="146.0" fitWidth="233.0" layoutX="263.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/Logo.png" />
     </ImageView>
-    <Button fx:id="login" layoutX="301.0" layoutY="166.0" mnemonicParsing="false" onAction="#login" prefHeight="31.0"
-            prefWidth="157.0" text="Login"/>
-    <Button id="register" fx:id="registrieren" layoutX="301.0" layoutY="217.0" mnemonicParsing="false"
-            onAction="#registrieren" prefHeight="31.0" prefWidth="157.0" stylesheets="@../styles/StartStyle.css"
-            text="Registrieren"/>
-    <Button fx:id="adminLogin" layoutX="301.0" layoutY="287.0" mnemonicParsing="false" onAction="#adminLogin"
-            prefHeight="31.0" prefWidth="157.0" text="Admin Login"/>
+    <Button fx:id="login" layoutX="301.0" layoutY="166.0" mnemonicParsing="false" onAction="#login" prefHeight="31.0" prefWidth="157.0" text="Login" />
+    <Button id="register" fx:id="registrieren" layoutX="301.0" layoutY="217.0" mnemonicParsing="false" onAction="#registrieren" prefHeight="31.0" prefWidth="157.0" stylesheets="@../styles/StartStyle.css" text="Registrieren" />
+    <Button fx:id="adminLogin" layoutX="301.0" layoutY="287.0" mnemonicParsing="false" onAction="#adminLogin" prefHeight="31.0" prefWidth="157.0" text="Admin Login" />
 </AnchorPane>
