--- a/Casino/src/main/resources/fxml/PennyPusher.fxml
+++ b/Casino/src/main/resources/fxml/PennyPusher.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,16 +9,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="454.0" prefWidth="681.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.games.PennyPusherController">
-   <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../src/main/resources/images/PennyPusher_Logo.png" />
-         </image>
-      </ImageView>
-      <GridPane fx:id="field" layoutX="177.0" layoutY="14.0" prefHeight="425.0" prefWidth="490.0" style="-fx-background-color: red;">
+<AnchorPane prefHeight="454.0" prefWidth="681.0" style="-fx-background-color: red;" stylesheets="@../styles/BasicStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.games.PennyPusherController">
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="/images/PennyPusher_Logo.png" />
+    </ImageView>
+    <GridPane fx:id="field" gridLinesVisible="true" layoutX="168.0" layoutY="61.0" prefHeight="378.0" prefWidth="499.0" style="-fx-background-color: green;">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -30,23 +27,25 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-      </GridPane>
-      <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="14.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../src/main/resources/images/coin.png" />
-         </image>
-      </ImageView>
-      <Label fx:id="coins" layoutX="61.0" layoutY="167.0" text="coins" />
-   </children>
+    </GridPane>
+    <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="14.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="/images/coin.png" />
+    </ImageView>
+    <Label fx:id="coins" layoutX="61.0" layoutY="167.0" text="coins" />
+    <Button fx:id="btn_slot1" layoutX="259.0" layoutY="14.0" mnemonicParsing="false" onAction="#btn_slot1_onAction" text="slot 1" />
+    <Button fx:id="btn_slot2" layoutX="395.0" layoutY="14.0" mnemonicParsing="false" onAction="#btn_slot2_onAction" text="slot 2" />
+    <Button fx:id="btn_slot3" layoutX="552.0" layoutY="14.0" mnemonicParsing="false" onAction="#btn_slot3_onAction" text="slot 3" />
+    <Button fx:id="btn_push" layoutX="49.0" layoutY="215.0" mnemonicParsing="false" onAction="#btn_push_onAction" text="schieben" />
 </AnchorPane>
