--- a/src/main/resources/fxml/TestGame.fxml
+++ b/src/main/resources/fxml/TestGame.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.bbbaden.casino.games.TestGameController">
-    <Label layoutX="272.0" layoutY="14.0" text="Roulette" />
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="ch.bbbaden.casino.games.TestGameController">
+    <Label layoutX="272.0" layoutY="14.0" text="Roulette"/>
 </AnchorPane>
