--- a/src/main/resources/styles/BasicStyle.css
+++ b/src/main/resources/styles/BasicStyle.css
@@ -1,10 +1,6 @@
-@font-face {
-    src: url('/fonts/Casino.ttf');
-}
-
 * {
-    -fx-font-family: "Casino";
     -fx-font-size: 20px;
+    -fx-font-family: casino;
 }
 
 .label {
@@ -17,7 +13,7 @@
 }
 
 #AnchorPane {
-    -fx-background-image: url("/images/background.jpg");
+    -fx-background-image: url("../images/background.jpg");
     -fx-background-repeat: stretch;
     -fx-background-size: 768 432;
     -fx-background-position: center center;
