--- a/src/main/resources/styles/HomeStyle.css
+++ b/src/main/resources/styles/HomeStyle.css
@@ -1,4 +1,4 @@
- /*
+/*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
@@ -10,12 +10,11 @@ and open the template in the editor.
 #AnchorPane {
     -fx-background-image: url("../images/background_menu.png");
     -fx-background-repeat: stretch;
-    -fx-background-size: 768 432;
     -fx-background-position: center center;
 }
 
 #button_right {
-    -fx-background-image: url("/images/arrow_right.png");
+    -fx-background-image: url("../images/arrow_right.png");
     -fx-background-repeat: stretch;
     -fx-background-color: none;
     -fx-background-size: 40 40;
@@ -23,7 +22,7 @@ and open the template in the editor.
 }
 
 #button_left {
-    -fx-background-image: url("/images/arrow_left.png");
+    -fx-background-image: url("../images/arrow_left.png");
     -fx-background-repeat: stretch;
     -fx-background-color: none;
     -fx-background-size: 40 40;
